--- a/Source/NHibernate/NHibernate.csproj
+++ b/Source/NHibernate/NHibernate.csproj
@@ -29,6 +29,8 @@
 	<PackageReference Include="FluentNHibernate" Version="3.1.0" />
 	<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
 	<PackageReference Include="NHibernate" Version="5.3.12" />
+	<PackageReference Include="System.Net.Http" Version="4.3.4" />
+	<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
