--- a/Source/MVC/MVC.csproj
+++ b/Source/MVC/MVC.csproj
@@ -27,8 +27,10 @@
 
   <ItemGroup>
 	<PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	<PackageReference Include="System.Net.Http" Version="4.3.4" />
+	<PackageReference Include="System.Security.Cryptography.Xml" Version="6.0.1" />
 	<PackageReference Include="System.Text.Encodings.Web" Version="6.0.0" />
 	<PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
