--- a/Source/Eml/Eml.csproj
+++ b/Source/Eml/Eml.csproj
@@ -36,4 +36,8 @@ Using .NET 3.1 because of AWS lambda - it does not accepts 5.0 at simplest versi
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
